add font-weight: 600

--- a/src/pug/sections/contacts-info.pug
+++ b/src/pug/sections/contacts-info.pug
@@ -22,7 +22,7 @@
 
 			.contacts-block--border#delivery-pickup.contacts-block--active
 				.subtitle-block.subtitle-block--justify
-					.contacts-text.contacts-text--large #[strong Пункты самовывоза]
+					.contacts-text.contacts-text--large Пункты самовывоза
 					a.contacts-link.contacts-link--notbold(href="#") Изменить
 				.pickup-points.
 					Постамат: ТК Нео 7801-003, Заневский пр-т, д. 38
@@ -32,7 +32,7 @@
 
 			.contacts-block--border#delivery-courier
 				.subtitle-block
-					.contacts-text.contacts-text--large #[strong Курьерская доставка]
+					.contacts-text.contacts-text--large Курьерская доставка
 				.delivery-info
 					.delivery-date.contacts-text-small Доставка: #[span.delivery-date__val] Сегодня
 					.delivery-price.contacts-text-small Стоимость доставки: #[span.delivery-price__val] 350р.
