add max-width for text

--- a/src/less/blocks/_section-card.less
+++ b/src/less/blocks/_section-card.less
@@ -51,7 +51,8 @@
 
 }
 
-.card-description__text{	
+.card-description__text{
+	max-width: 99%;	
 	min-height: 96px;
 	margin-bottom: 24px;
 	line-height: 1.28em;		
