--- a/src/pug/pages/ui/job-modal.pug
+++ b/src/pug/pages/ui/job-modal.pug
@@ -9,7 +9,7 @@ block content
 	.container.container--left
 		.title Модальное окно "Отклики на вакансию"
 		.modal-window
-			.form.job-modal(style="border: 1px dashed #000; display:block;" id="job-modal")
+			.form.job-modal(style="display:block;" id="job-modal")
 				.job-modal__title Отклики на вакансию
 				.job-modal__inputs
 					+inputField('Фамилия Имя', 'Вы ничего не ввели', 'notEmpty', 'text', '', '')
