add size for thumbnails-img

--- a/src/less/blocks/_photo-of-product.less
+++ b/src/less/blocks/_photo-of-product.less
@@ -43,9 +43,12 @@
 	margin-right: 8px;
 	
 	@media @tablet {
+		max-width: 76px;
 		margin-right: 16px;	
 	}
-
+	@media @desktop {
+		max-width: 100%;
+	}
 	&:last-child {
 		margin-right: 0;
 		
