small magrin-top gor svg-container

--- a/src/less/pages/page404.less
+++ b/src/less/pages/page404.less
@@ -27,7 +27,8 @@ body.page-404 {
 	width: 100%;
 	position: relative;
 	overflow: hidden;
-	margin-top: -150px;
+	//margin-top: -150px;
+	margin-top: 0px
 }
 
 .page404__title {
