--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -116,7 +116,7 @@
 		font-size: 16px;
 	}
 }
-/*удаления крестика в конце инпута*/
-.someinput::-ms-clear {
+/* IE11 удаления крестика в конце инпута*/
+input::-ms-clear {
     display: none;
 }
