--- a/src/pug/sections/show-order.pug
+++ b/src/pug/sections/show-order.pug
@@ -9,9 +9,13 @@
 			+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-2.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
 			+ordered-goods-item('good_thumbnail/blue-purse/thumb_blue-purse-1.png',' кошелек синий', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '1252-130', '4 893р.' )
 
-		.ordered-item.ordered-promo
-			+inputField('Введите промо-код', '', 'notCheck', 'text')
-			+button-apply('Применить', '#')
+		.ordered-item
+			.ordered-promo
+				+inputField('Введите промо-код', '', 'notCheck', 'text', 'promo-input')
+				+button-apply('Применить', '#')
+			.ordered-promo-type
+				a.ordered-promo-type__code.active-type(href="#") Введите промо-код
+				a.ordered-promo-type__card(href="#") Введите номер клубной карты
 		.ordered-calc
 			.ordered-calc__item
 				span.ordered-calc-text Стоимость
