--- a/src/pug/layouts/page-layout/_foot.pug
+++ b/src/pug/layouts/page-layout/_foot.pug
@@ -16,5 +16,7 @@ script(src="js/goods-cart.js")
 script(src="js/button-file.js")
 script(src="js/products-table.js")
 script(src="js/profile-menu.js")
+script(src="js/fix-ie.js")
+
 
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
