--- a/src/pug/layouts/ui-layout/_foot.pug
+++ b/src/pug/layouts/ui-layout/_foot.pug
@@ -13,5 +13,6 @@ script(src="../js/form-order.js")
 script(src="../js/modal-window.js")
 script(src="../js/button-file.js")
 script(src="../js/products-table.js")
+script(src="../js/fix-ie.js")
 
 script(defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js")
