Был ошибочно дописан класс к тайтлу Продавец кассир. Поправила.

--- a/src/pug/sections/accordeon-job.pug
+++ b/src/pug/sections/accordeon-job.pug
@@ -37,7 +37,7 @@
 			+button-apply('Отправить резюме', '#')(class="show-modal-window" data-modal='#job-modal')
 
 	.job-accordeon-item
-		.job-accordeon-item__title Продавец - кассир / г. Москва(class="show-modal-window")
+		.job-accordeon-item__title Продавец - кассир / г. Москва
 			.content-icon
 		.job-accordeon-item__content
 			.content__list-title Обязанности
