edit promo links text and margin

--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -150,8 +150,7 @@
 	margin-bottom: 16px;	
 }
 .ordered-promo-type{	
-	display: flex;
-	justify-content: space-between;
+	display: flex;	
 	align-items: center;
 }
 
@@ -161,13 +160,18 @@
 	color:@order-calc;
 	text-decoration: none;
 	border-bottom: 1px solid @order-calc;
-	@media @tablet {
+	@media @desktop {
 		font-size: 14px;
 	}
 	&:hover{
 		text-decoration: none;
 		border-bottom-color: @red;
 	}
+}
+.ordered-promo-type__code{
+	margin-right: 40px;
+	@media (min-width:576px) {margin-right: 100px;}
+	@media @tablet {margin-right: 40px;}
 }
 .active-type{border-bottom: 0px;}
 .ordered-promo .input-wrapper {
