edit script and edit promo links

--- a/src/less/blocks/_show-order.less
+++ b/src/less/blocks/_show-order.less
@@ -173,7 +173,7 @@
 	@media (min-width:576px) {margin-right: 100px;}
 	@media @tablet {margin-right: 40px;}
 }
-.active-type{border-bottom: 0px;}
+.passive-type{border-bottom: 0px;}
 .ordered-promo .input-wrapper {
 	width: 60%;
 	margin-right: 8px;
