Изменен title у страницы account-orders.html

--- a/src/pug/pages/account-orders.pug
+++ b/src/pug/pages/account-orders.pug
@@ -1,7 +1,7 @@
 extends ../layouts/page-layout/blur-wrapper.pug
 
 block variables
-	- var title = 'Главная страница';
+	- var title = 'Мои заказы';
 	- var pageClass = 'index-page';
 
 block content
