Изменен тайтл заголовка страницы на "Страница 404"

--- a/src/pug/pages/page404.pug
+++ b/src/pug/pages/page404.pug
@@ -1,7 +1,7 @@
 extends ../layouts/page-layout/page.pug
 
 block variables
-	- var title = 'Каталог товаров';
+	- var title = 'Страница 404';
 	- var pageClass = 'page-404';
 
 block content
