--- a/src/pug/sections/registration-form.pug
+++ b/src/pug/sections/registration-form.pug
@@ -11,7 +11,7 @@
 			
 		+button-apply('Регистрация', '#')
 		p.contacts-block-footer.contacts-text-small.contacts-text-small--reg.text-left.
-			Нажимая кнопку "Регистрация", вы соглашаетесь с #[a.contacts-link.contacts-link--small условиями оферты] и #[a.contacts-link.contacts-link--small политикой конфиденциальности.]
+			Нажимая кнопку "Регистрация", вы соглашаетесь с #[a.contacts-link.contacts-link--small(href="#") условиями оферты] и #[a.contacts-link.contacts-link--small(href="#") политикой конфиденциальности.]
 	.login-footer
 		.login-footer-title.login-footer-title--reg Или зарегистрируйтесь
 				br
