--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -11,7 +11,7 @@
 	left: -200vw;
 	height: 100%;
 	width: 100%;
-	transition: left 0.5s ease-in-out;
+	transition: all 0.5s;
 	
 
 
@@ -101,14 +101,14 @@
 		margin-top: 46px;
 	}
 }
-.catalog-filter--show {
-	display: flex;
-	left: 0;
-	transition: left 0.5s ease-in-out;	
-	@media @desktop {
-		transition: none;
-	}
-}
+// .catalog-filter--show {
+// 	display: flex;
+// 	left: 0;
+// 	transition: all 0.5s;	
+// 	@media @desktop {
+// 		transition: none;
+// 	}
+// }
 .catalog__title{
 	text-align: center;
 	&-count {
