--- a/src/pug/layouts/page-layout/_head.pug
+++ b/src/pug/layouts/page-layout/_head.pug
@@ -4,6 +4,8 @@ meta(name="viewport" content="width=device-width,initial-scale=1, shrink-to-fit=
 <!--[if IE]>
 meta(http-equiv='X-UA-Compatible', content="IE=edge")
 <![endif]-->
+meta(http-equiv='X-UA-Compatible', content="IE=edge")
+
 
 title #{title}
 meta(name="keywords" content="")
