--- a/src/less/pages/catalog.less
+++ b/src/less/pages/catalog.less
@@ -24,7 +24,7 @@
 	@media @desktop {
 		box-shadow: none;
 		position: relative;
-		display: block;
+		display: flex;
 		justify-content: space-between;
 		flex-basis: 270px;
 		width: 100%;
@@ -101,14 +101,14 @@
 		margin-top: 46px;
 	}
 }
-// .catalog-filter--show {
-// 	display: flex;
-// 	left: 0;
-// 	transition: all 0.5s;	
-// 	@media @desktop {
-// 		transition: none;
-// 	}
-// }
+.catalog-filter--show {
+	display: flex;
+	left: 0;
+	transition: all 0.5s;
+	@media @desktop {
+		transition: none;
+	}
+}
 .catalog__title{
 	text-align: center;
 	&-count {
