--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -98,6 +98,7 @@
 	padding-left: 15px;
 	width: 100%;
 	display: none;
+	margin-top: -15px;
 }
 
 .input-field__label {
@@ -116,6 +117,7 @@
 		font-size: 16px;
 	}
 }
+
 /* IE11 удаления крестика в конце инпута*/
 input::-ms-clear {
     display: none;
