--- a/src/pug/pages/ui/show-order.pug
+++ b/src/pug/pages/ui/show-order.pug
@@ -25,7 +25,7 @@ block content
 						+button-apply('Применить', '#')
 					.ordered-promo-type
 						a.ordered-promo-type__link.ordered-promo-type__code(href="#" data-placeholder="Введите промо-код") Промо-код
-						a.ordered-promo-type__link.ordered-promo-type__card.passive-type(href="#" data-placeholder="Введите номер клубной карты") Клубная карта
+						a.ordered-promo-type__link.ordered-promo-type__card.passive-type(href="#" data-placeholder="Номер клубной карты") Клубная карта
 				.ordered-calc
 					.ordered-calc__item
 						span.ordered-calc-text Стоимость
