edit margin-top for label contact-info

--- a/src/less/blocks/_inputs.less
+++ b/src/less/blocks/_inputs.less
@@ -98,7 +98,6 @@
 	padding-left: 15px;
 	width: 100%;
 	display: none;
-	margin-top: -15px;
 }
 
 .input-field__label {
@@ -122,3 +121,4 @@
 input::-ms-clear {
     display: none;
 }
+.contacts .contacts-info .input-field__error-text{margin-top: -15px;}
