--- a/src/less/sections/_contact-info.less
+++ b/src/less/sections/_contact-info.less
@@ -219,3 +219,8 @@
 	font-size: 12px;
 	@media @desktop {font-size: 14px;}
 }
+.contacts .contacts-info .input-field__error-text{
+	margin-top: -5px;
+	@media @desktop {
+	margin-top: -15px;}
+}
