shop-card-first-commit

--- a/src/pug/layouts/_mixins-links.pug
+++ b/src/pug/layouts/_mixins-links.pug
@@ -15,3 +15,4 @@ include ../mixins/_show-order.pug
 include ../mixins/_vertical-menu.pug
 include ../mixins/_color-line.pug
 include ../mixins/_products-table.pug
+include ../mixins/_shop-card.pug
