--- a/src/less/main.less
+++ b/src/less/main.less
@@ -48,6 +48,7 @@
 @import "blocks/_login-forms.less";
 @import "blocks/_accordeon-job.less";
 @import "blocks/_job-modal.less";
+@import "blocks/_shop-card.less";
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
