fix error label-error-text

--- a/src/less/blocks/_profile-contacts.less
+++ b/src/less/blocks/_profile-contacts.less
@@ -1,6 +1,6 @@
 
-.contacts-info--profile .input-field{
-	margin-bottom: 16px;
+.contacts-info--profile .input-wrapper{
+	//margin-bottom: 12px;
 }
 .title-4.contacts-title--special-margin{
 	margin-bottom: 20px;
