edit job-accordeon title font size

--- a/src/less/blocks/_accordeon-job.less
+++ b/src/less/blocks/_accordeon-job.less
@@ -36,9 +36,11 @@
 		padding:16px 16px;
 	}
 	@media @desktop {
+		font-size: 18px;
 		padding:20px 24px;	
 	}
 	@media @desktopXL {
+		font-size: 20px;
 		padding:20px 24px;
 	}
 }
