add link for product-color

--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -105,14 +105,22 @@ block content
 							.product-order__colors
 								.colors__title Доступные цвета
 								.colors__images
-									img(src="img/good_colors/violet.png" alt="Картинка")
-									img(src="img/good_colors/color-2.png" alt="Картинка")
-									img(src="img/good_colors/color-3.png" alt="Картинка")
-									img(src="img/good_colors/color-4.png" alt="Картинка")
-									img(src="img/good_colors/color-5.png" alt="Картинка")
-									img(src="img/good_colors/color-6.png" alt="Картинка")
-									img(src="img/good_colors/color-7.png" alt="Картинка")
-									img(src="img/good_colors/color-8.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/violet.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-2.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-3.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-4.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-5.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-6.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-7.png" alt="Картинка")
+									a.colors__images__linl(href="#")
+										img(src="img/good_colors/color-8.png" alt="Картинка")
 						
 						.d-none.d-lg-block
 							include  ../sections/accordeon.pug	
