add tag h1 for head

--- a/src/pug/pages/account-favourite.pug
+++ b/src/pug/pages/account-favourite.pug
@@ -30,7 +30,7 @@ block content
 				
 				//- Заголовок
 				.col-12.order-md-first
-					.favourite__title.title-1 ИЗБРАННОЕ
+					h1.favourite__title.title-1 ИЗБРАННОЕ
 
 				//- Избранное
 				.col-md-9
