--- a/src/pug/pages/account-orders.pug
+++ b/src/pug/pages/account-orders.pug
@@ -29,7 +29,7 @@ block content
 							+cabinet-menu-item('#', 'выйти')
 				//- Заголовок
 				.col-12.order-md-first
-					.profile__title.profile__title--mb.title-1 МОИ ЗАКАЗЫ
+					h1.profile__title.profile__title--mb.title-1 МОИ ЗАКАЗЫ
 
 				//- таблица заказов
 				.col-md-8.col-lg-8.offset-lg-1.col-xl-6.offset-xl-1
