--- a/src/pug/pages/account-profile.pug
+++ b/src/pug/pages/account-profile.pug
@@ -29,7 +29,7 @@ block content
 							+cabinet-menu-item('#', 'выйти')
 				//- Заголовок
 				.col-12.order-md-first
-					.profile__title.title-1 ПРОФИЛЬ
+					h1.profile__title.title-1 ПРОФИЛЬ
 				
 				//- Контактная информация
 				.offset-md-2.col-md-6.offset-lg-1.col-lg-4.offset-xl-1.col-xl-4
