--- a/src/pug/pages/catalog.pug
+++ b/src/pug/pages/catalog.pug
@@ -16,7 +16,7 @@ block content
 		//- Основной контент
 		.section-catalog
 			.container
-				.title-1.uppercase.catalog__title Мужские кошельки 
+				h1.title-1.uppercase.catalog__title Мужские кошельки 
 					span.catalog__title-count &mdash; 235
 				p.catalog__title-description Ожидайте яркий взрыв в вашей сумке с нашими уникальными кошельками для мужчин: кожа лучшего качества, элегантные конструкции и уникальные детали для непревзойденного продукта, который вы Можете наслаждаться каждый день!
 				.catalog-badge
