--- a/src/pug/pages/job.pug
+++ b/src/pug/pages/job.pug
@@ -52,7 +52,7 @@ block content
 								+cabinet-menu-item('#', 'блог')
 					//-Заголовок
 					.col-12.order-md-first
-						.job__title.title-1 ВАКАНСИИ
+						h1.job__title.title-1 ВАКАНСИИ
 					
 					//- Инфо + аккардеон
 					.col-md-9.offset-lg-1.col-lg-7.offset-xl-1.col-xl-6
