--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -27,7 +27,8 @@ block content
 		//- хиты продаж
 		.section-top-sales
 			.container
-				a.title-1.title--link(href="#") Хиты продаж				
+				a.title--link(href="#")
+					h1.title-1 Хиты продаж				
 				.row
 					.col-6.col-md-3
 						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
