--- a/src/pug/pages/order.pug
+++ b/src/pug/pages/order.pug
@@ -40,7 +40,7 @@ block content
 				//- Заголовок + Купить в 1 клик (для планшета и более)
 				.col
 					.order-title-block.d-none.d-md-flex
-						.order__tile.title-1 ОФОРМИТЬ И ОПЛАТИТЬ
+						h1.order__tile.title-1 ОФОРМИТЬ И ОПЛАТИТЬ
 						+button-buyclick("Купить в 1 клик", "#")(class='show-modal-window' data-modal='#order-one-click')
 				.row
 					//- Заказ
