--- a/src/pug/pages/page404.pug
+++ b/src/pug/pages/page404.pug
@@ -12,6 +12,6 @@ block content
 		.page404-wrapper
 			include ../icons/page404.pug
 			.page404__text-wrapper
-				.page404__title ОШИБКА 404
+				h1.page404__title ОШИБКА 404
 				.page404__subtitle К сожалению такой страницы не существует, перейдите в 
 					a(href="catalog.html").page404__subtitle-link каталог товаров
