--- a/src/pug/pages/product.pug
+++ b/src/pug/pages/product.pug
@@ -81,7 +81,7 @@ block content
 						.product-order-block
 							.product-heart-icon.toggle-heart-icon
 								i.fas.fa-heart
-							.title-1 Большой Zip Around Кошелек
+							h1.title-1 Большой Zip Around Кошелек
 							.product-order__article Артикул: 1252-130
 							.product-order__price
 								span.new-price 4 893р.
