--- a/src/pug/sections/thanks-for-ordering.pug
+++ b/src/pug/sections/thanks-for-ordering.pug
@@ -1,6 +1,6 @@
 .thanks
 	.thanks-header
-		.thanks-header__title Спасибо за заказ!
+		h1.thanks-header__title Спасибо за заказ!
 		.thanks-header__subtitle #[span Артем], Ваш заказ успешно оформлен!
 			|
 			br
