--- a/src/pug/mixins/_mixins.pug
+++ b/src/pug/mixins/_mixins.pug
@@ -51,7 +51,7 @@ mixin checkboxFilter (text)
 mixin goodsCart (img, text, price)
 	.goods-cart-wrapper.clearfix
 		.goods-cart__img
-			img(src="../../img/good_thumbnail/blue-purse/" + img, alt="blue-purse")
+			img(src="../img/good_thumbnail/blue-purse/" + img, alt= img)
 		.goods-cart__info
 			.goods-cart__title-icon
 				.goods-cart__description= text
