edit icons header-info

--- a/src/less/sections/_header-top.less
+++ b/src/less/sections/_header-top.less
@@ -154,8 +154,15 @@
 
 	@media @desktop {height: 114px;}	
 }
-
-
+.header-info__icon-marker{
+	min-width: 9px;
+	max-height: 9px;
+}
+.header-info__icon{
+	margin-right: 5px;
+	margin-top: 3px;
+}
+.header-info__icon--mt{margin-top: 5px;}
 
 
 
