IE 11 убрали горизонтальный скролл у мобильного меню

--- a/src/less/sections/_header-nav.less
+++ b/src/less/sections/_header-nav.less
@@ -116,6 +116,7 @@ ul.menu-level-1>li>a {
 // Обертку добавили, чтобы вынести меню абсолюно относительно header с полной шириной экрана
 // при этом чтобы содержимое меню было в контейнере
 .menu-level-2-wrapper {
+	overflow-x:hidden;
 	@media @desktop {
 		z-index: 2;
 		background-color: @white;
