change footer slogan

--- a/src/pug/sections/_footer-subscribe.pug
+++ b/src/pug/sections/_footer-subscribe.pug
@@ -1,7 +1,9 @@
 .container
 	.footer-subscribe
-		.title-4 Выбери цвет своей индивидуальности!
-		.footer-subscribe--subtitle Будь в курсе новостей и специальных предложениях!
+		.title-4.footer-subscribe__slogan Подпишись на рассылку, чтобы
+			|
+			br
+			| быть в курсе новинок и акций!
 		form.footer-subscribe--form(action="")
 			.footer-subscribe-wrapper
 				+inputField('Email', 'Пожалуйста, введите действительный адрес электронной почты', 'email', 'text')
