--- a/src/pug/pages/ui/footer-subscribe.pug
+++ b/src/pug/pages/ui/footer-subscribe.pug
@@ -12,8 +12,7 @@ block content
 		.section-ui
 			.container
 				.footer-subscribe
-					.title-4 Выбери цвет своей индивидуальности!
-					.footer-subscribe--subtitle Будь в курсе новостей и специальных предложениях!
+					.title-4.footer-subscribe__slogan Подпишись на рассылку, чтобы быть в курсе новинок и акций!
 					form.footer-subscribe--form(action="")
 						.footer-subscribe-wrapper
 							+inputField('Email', 'Пожалуйста, введите действительный адрес электронной почты', 'email', 'text')
