edit variable name

--- a/src/pug/mixins/_shop-card.pug
+++ b/src/pug/mixins/_shop-card.pug
@@ -1,6 +1,6 @@
-mixin shop-card(cardTitile, cardAddress, cardPhone, cardTime, cardstage)
+mixin shop-card(cardTitle, cardAddress, cardPhone, cardTime, cardstage)
 	.shop-card&attributes(attributes)
-		.shop-card__title #{cardTitile}
+		.shop-card__title #{cardTitle}
 		.shop-card__item
 			span.shop-card__item-name Адрес:
 			span.shop-card__item-value #{cardAddress}
