--- a/src/pug/pages/ui/shop-card.pug
+++ b/src/pug/pages/ui/shop-card.pug
@@ -12,4 +12,4 @@ block content
 		+shop-card('Центральный офис', 'ул. Зорге, 22А','+7 (495) 132-62-60','Ежедневно с 9.00 до 20.00', '13')
 		.section-ui
 			pre.
-				+shop-card(cardTitile, cardAddress, cardPhone, cardTime, cardstage)
+				+shop-card(cardTitle, cardAddress, cardPhone, cardTime, cardstage)
