--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -67,6 +67,7 @@
 	.left-panel__section
 		p.strong Секции
 		.left-panel-nav
+			+linkLeftPanel("Текстовые блоки стр Article", "article-text.html")
 			+linkLeftPanel("Форма регистрации", "registration-form.html")
 			+linkLeftPanel("Форма входа в ЛК", "login-form.html")
 			+linkLeftPanel("Восстановление пароля", "password-recover.html")
