--- a/src/less/blocks/_article-text.less
+++ b/src/less/blocks/_article-text.less
@@ -61,3 +61,17 @@
 	@media @desktop{margin-bottom: 30px;}
 	@media @desktopXL{margin-bottom: 36px;}
 }
+.text-block-list{
+	margin: 0;
+	padding: 0;
+	margin-left: 18px;
+	@media @desktop{margin-left: 20px;}
+}
+.text-block-list__item{
+	font-size: 14px;
+	margin-bottom: 10px;
+	@media @desktop{font-size: 16px;}
+	@media @desktopXL{
+		font-size: 18px;
+		margin-bottom: 13px;}
+}
