--- a/src/pug/pages/ui/article-text.pug
+++ b/src/pug/pages/ui/article-text.pug
@@ -23,3 +23,18 @@ block content
 				br
 				| К сожалению, до марта 2018 года включительно при покупке товаров на нашем сайте, скидки по клубной карте не начисляются. Но совершается накопление суммы по карте - для этого, пожалуйста, оставьте номер вашей карты в поле "Комментарий". Совсем скоро мы станем удобнее и лучше для Вас!				
 			p.text-block__paragrafe Благодарим за понимание.
+		.text-block
+			h3.title-3.title-3--grey.text-block__title Оплата заказов
+			ul.text-block-list
+				li.text-block-list__item Достойная и стабильная заработная плата
+					|
+					br
+					|(оклад + премии) 
+				li.text-block-list__item Бесплатное обучение
+				li.text-block-list__item Возможность карьерного роста
+				li.text-block-list__item Сменный график работы
+				li.text-block-list__item Оформление согласно ТК РФ
+
+		.text-block
+			p.text-block__paragrafe.
+				Компания Mywalit считает основным активом и залогом успеха потенциал своих сотрудников. Компания активно развивается и ищет молодых перспективных специалистов и опытных профессионалов.
