add pl for section-article

--- a/src/less/pages/article-page.less
+++ b/src/less/pages/article-page.less
@@ -1,19 +1,21 @@
 .section-article-content{
 	margin-bottom: 56px;
-	@media @tablet{margin-bottom: 76px;}
+	@media @tablet{
+		margin-left: 16px;
+		margin-bottom: 76px;}
 	@media @desktop{margin-bottom: 150px;}
 	@media @desktopXL{margin-bottom: 178px;}
 }
 .title-1--center{
 	text-align: center;
-	margin-bottom: 22px;
-	@media @desktop{margin-bottom: 38px;}
-	@media @desktopXL{margin-bottom: 50px;}
+	margin-bottom: 40px;
+	@media @desktop{margin-bottom: 34px;}
+	@media @desktopXL{margin-bottom: 46px;}
 }
 .section-article__banner{
 	margin-bottom: 34px;
 	@media @desktop{
-		margin-top: 16px;
+		margin-top: 20px;
 		margin-bottom: 48px;}
 	@media @desktopXL{margin-bottom: 56px;}
 }
