--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -99,7 +99,7 @@
 			+linkLeftPanel("Восстановление пароля", "../password-recover-page.html")
 			+linkLeftPanel("Вакансии", "../job.html")
 			+linkLeftPanel("Заказы пользователя в ЛК", "../account-orders.html")
-			+linkLeftPanel("Сотрудничество", "../article-page.html")
+			+linkLeftPanel("Сотрудничество", "../article.html")
 
 
 #ui-nav-toggle Скрыть/Показать навигацию
