--- a/src/pug/pages/article.pug
+++ b/src/pug/pages/article.pug
@@ -10,7 +10,7 @@ block content
 	.blur-wrapper
 		//- шапка
 		.header
-			include ../sections/header_order-page.pug
+			include ../sections/header.pug
 		//- Хлебные крошки
 		.section-breadcrumb
 			.container
