edit card paddings

--- a/src/less/blocks/_shop-card.less
+++ b/src/less/blocks/_shop-card.less
@@ -1,17 +1,22 @@
 .shop-card{
 	border:1px solid @textMenu;
 	padding: 16px;
-	margin-bottom: 16px;	
+	margin-bottom: 16px;
+    @media @desktop{padding: 24px;}
+
+
 }
 .shop-card__title{
 	font-size: 20px;
 	font-weight: 600;
 	color: @contacts-text;
-	margin-bottom: 16px;
-	@media @desktop{font-size: 22px;}	
+	margin-bottom: 14px;
+	@media @desktop{
+		margin-bottom: 16px;
+		font-size: 22px;}	
 }
 .shop-card__item{
-	margin-bottom: 10px;
+	margin-bottom: 5px;
 	font-size: 14px;
 	color: @contacts-text;
 	@media @desktop{font-size: 16px;}
@@ -27,5 +32,8 @@
 	display: inline-block;
 	border-bottom: 1px solid @textMenu;
 }
-.shop-card__item:nth-last-child(2){margin-bottom: 24px;}
+.shop-card__item:nth-last-child(2){
+	margin-bottom: 16px;
+	@media @desktop{margin-bottom: 24px;}
+}
 
