to move link in sections Blocks

--- a/src/pug/pages/ui/shop-card.pug
+++ b/src/pug/pages/ui/shop-card.pug
@@ -7,7 +7,7 @@ block variables
 block content
 
 	.container.container--left
-		.title Информационная карточка
+		.title Карточка с адресом офиса
 		.section-ui
 		+shop-card('Центральный офис', 'ул. Зорге, 22А','+7 (495) 132-62-60','Ежедневно с 9.00 до 20.00', '13')
 		.section-ui
