--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -34,7 +34,7 @@
 
 
 
-			
+			+linkLeftPanel("Карточка с адресом офиса", "shop-card.html")
 			+linkLeftPanel("Модальное окно - Вакансии", "job-modal.html")
 			+linkLeftPanel("Аккордеон - Вакансии", "accordeon-job.html")
 			+linkLeftPanel("Таблица продуктов", "products-table.html")
@@ -62,7 +62,7 @@
 			+linkLeftPanel("Выпадающий список", "drop-down.html")
 			+linkLeftPanel("Товары в корзине", "goods-cart.html")
 			+linkLeftPanel("Корзина с товаром", "goods-cart-page.html")
-			+linkLeftPanel("Карточка с офисом", "shop-card.html")
+			
 
 
 	.left-panel__section
