new label fot product card

--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -115,6 +115,13 @@
 	color: @white;
 	line-height: 16px;
 	padding-top: 8px;
+	text-transform: uppercase;
+}
+.card-label-sale.card-label-sale--new{
+	background-color: @label-new;
+}
+.card-label-sale.card-label-sale--hit{
+	background-color: @label-hit;
 }
 
 .card__price--sale{
