--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -45,6 +45,7 @@
 			+linkLeftPanel("Кнопки", "buttons.html")
 			+linkLeftPanel("Фильтр", "filter.html")
 			+linkLeftPanel("Карточки товара", "cards.html")
+			+linkLeftPanel("Карточки товара с лейблом", "card-whith-label.html")
 			+linkLeftPanel("Карточка раздела", "section-card.html")
 			+linkLeftPanel("Социальные сети", "ui-social.html")
 			+linkLeftPanel("Выбор города", "city-selection.html")
