add modifikator for label

--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -117,10 +117,10 @@
 	padding-top: 8px;
 	text-transform: uppercase;
 }
-.card-label-sale.card-label-sale--new{
+.card-label-sale--new{
 	background-color: @label-new;
 }
-.card-label-sale.card-label-sale--hit{
+.card-label-sale--hit{
 	background-color: @label-hit;
 }
 
