--- a/src/pug/pages/ui/card-whith-label.pug
+++ b/src/pug/pages/ui/card-whith-label.pug
@@ -16,11 +16,11 @@ block content
 						+button-cart('В корзину','#')
 
 				.col-6.col-md-3
-					+card--sale( 'хiт','card-label-sale--hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
+					+card--sale( 'хiт','hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
 						+button-cart('В корзину','#')
 
 				.col-6.col-md-3
-					+card--sale( 'new','card-label-sale--new' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme ")
+					+card--sale( 'new','new' ,'goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )(class="card-product--colorscheme ")
 						+button-store('Нет в наличии','#')
 						+colors-product('#FF7979', '#6BAC89', '#C3499E', '#FFB047', '#002D76', '#AF674F')
 
