--- a/src/pug/pages/ui/cards.pug
+++ b/src/pug/pages/ui/cards.pug
@@ -16,7 +16,7 @@ block content
 						+button-store('Нет в наличии','#')
 
 				.col-6.col-md-3
-					+card--sale( 'хит','card-label-sale--hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
+					+card--sale( 'хит','hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
 						+button-cart('В корзину','#')
 
 				.col-6.col-md-3
@@ -34,7 +34,7 @@ block content
 				+button-store('Нет в наличии','#')
 		strong Карточка с лейблом ХИТ				
 		pre.
-			+card--sale( 'хит','card-label-sale--hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
+			+card--sale( 'хит','hit','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown','#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 863р.', '4 863р.' )
 				+button-cart('В корзину','#')
 
 		strong Карточка обычная с цветовой палитрой 				
