--- a/src/pug/sections/_contacts-profile.pug
+++ b/src/pug/sections/_contacts-profile.pug
@@ -22,6 +22,8 @@
 						+inputField('Название улицы', 'Вы ничего не ввели', 'notEmpty', 'text')
 				.row
 					.col
+						+inputField('Индекс', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
+					.col
 						+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
 					.col
 						+inputField('№ кв./офис', 'Вы ничего не ввели', 'notEmpty', 'text')
