--- a/src/pug/pages/ui/profile-contacts.pug
+++ b/src/pug/pages/ui/profile-contacts.pug
@@ -32,6 +32,8 @@ block content
 								+inputField('Название улицы', 'Вы ничего не ввели', 'notEmpty', 'text')
 						.row
 							.col
+								+inputField('Индекс', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
+							.col
 								+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
 							.col
 								+inputField('№ кв./офис', 'Вы ничего не ввели', 'notEmpty', 'text')
