--- a/src/pug/pages/account-profile.pug
+++ b/src/pug/pages/account-profile.pug
@@ -32,5 +32,5 @@ block content
 					h1.profile__title.title-1 ПРОФИЛЬ
 				
 				//- Контактная информация
-				.offset-md-2.col-md-6.offset-lg-1.col-lg-4.offset-xl-1.col-xl-4
+				.offset-md-2.col-md-6.offset-lg-1.col-lg-4
 					include ../sections/_contacts-profile.pug
