--- a/src/pug/sections/_contacts-profile.pug
+++ b/src/pug/sections/_contacts-profile.pug
@@ -22,9 +22,9 @@
 						+inputField('Название улицы', 'Вы ничего не ввели', 'notEmpty', 'text')
 				.row
 					.col
-						+inputField('Индекс', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
+						+inputField('Индекс', 'Вы ничего не ввели', 'notEmpty', 'text')
 					.col
-						+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')(class="field-mr-16")
+						+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')
 					.col
 						+inputField('№ кв./офис', 'Вы ничего не ввели', 'notEmpty', 'text')
 		.contacts-block
