new padding left and letter-spacing

--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -109,19 +109,22 @@
 	height: 30px;
 	border-top-right-radius: 15px;
 	border-bottom-right-radius: 15px;
-	background-color: @red;
-	text-align: center;
+	background-color: @red;	
 	font-size: 14px;
 	color: @white;
 	line-height: 16px;
 	padding-top: 8px;
+	text-align: left;
+	padding-left: 8px;
 	text-transform: uppercase;
 }
 .card-label-sale--new{
 	background-color: @label-new;
+	letter-spacing: -0.3px
 }
 .card-label-sale--hit{
 	background-color: @label-hit;
+	letter-spacing: -0.3px
 }
 
 .card__price--sale{
