letter-spacing 0.5px

--- a/src/less/blocks/_card-product.less
+++ b/src/less/blocks/_card-product.less
@@ -117,14 +117,15 @@
 	text-align: left;
 	padding-left: 8px;
 	text-transform: uppercase;
+
 }
 .card-label-sale--new{
 	background-color: @label-new;
-	letter-spacing: -0.3px
+	letter-spacing: 0.5px;
 }
 .card-label-sale--hit{
 	background-color: @label-hit;
-	letter-spacing: -0.3px
+	letter-spacing: 0.7px;
 }
 
 .card__price--sale{
