--- a/src/less/blocks/_article-text.less
+++ b/src/less/blocks/_article-text.less
@@ -44,7 +44,8 @@
 	position: relative;
 	padding-top: 16px;
 	padding-bottom: 24px;
-	@media @desktop{padding: 24px 24px 38px;}
+	@media @desktop{padding: 24px 24px 29px;}
+	@media @desktopXL{padding: 24px 24px 36px;}
 }
 .text-block--border .text-block__paragrafe{
 	letter-spacing: -0.3px;
