edit text label

--- a/src/pug/sections/contacts-info.pug
+++ b/src/pug/sections/contacts-info.pug
@@ -47,7 +47,7 @@
 					.col
 						+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')
 					.col
-						+inputField('№ кв./офис', 'Вы ничего не ввели', 'notEmpty', 'text')
+						+inputField('№ кв/оф', 'Вы ничего не ввели', 'notEmpty', 'text')
 
 			.delivery-comments
 				.icon-comments.icon-comments--plus
