--- a/src/pug/pages/ui/profile-contacts.pug
+++ b/src/pug/pages/ui/profile-contacts.pug
@@ -36,7 +36,7 @@ block content
 							.col
 								+inputField('№ дома', 'Вы ничего не ввели', 'notEmpty', 'text')
 							.col
-								+inputField('№ кв./офис', 'Вы ничего не ввели', 'notEmpty', 'text')
+								+inputField('№ кв/оф', 'Вы ничего не ввели', 'notEmpty', 'text')
 				.contacts-block
 					.title-4.contacts-title.contacts-title--profile Изменить пароль
 					.form-group-passw
