edit letter-spacing -1px

--- a/src/less/blocks/_article-text.less
+++ b/src/less/blocks/_article-text.less
@@ -2,6 +2,7 @@
 	padding-left: 16px;
 	padding-right: 16px;
 	margin-bottom: 22px;
+	letter-spacing: -1px;
 	@media @desktop{
 	padding-left: 24px;
 	padding-right: 24px;
@@ -47,9 +48,8 @@
 	@media @desktop{padding: 24px 24px 29px;}
 	@media @desktopXL{padding: 24px 24px 36px;}
 }
-.text-block--border .text-block__paragrafe{
-	letter-spacing: -0.3px;
-	@media @tablet {letter-spacing: 0;}
+.text-block--border .text-block__paragrafe{	
+	//@media @tablet {letter-spacing: 0.9;} 
 }
 .text-block--border:before{
 	content:"";
