--- a/src/pug/pages/article.pug
+++ b/src/pug/pages/article.pug
@@ -41,13 +41,13 @@ block content
 								img(src="../img/bg/article-banner.jpg", alt="banner")
 							section.text-block
 								h1.title-1.title-1--grey.text-block__title Заголовок первого уровня
-								p.text-block__paragrafe  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo eos cumque at accusamus id eveniet dignissimos, nisi pariatur ea quo maxime commodi, magni earum beatae nam quidem a, provident inventore.
+								p.text-block__paragrafe  Компания Mywalit считает основным активом и залогом успеха потенциал своих сотрудников. Компания активно развивается и ищет молодых перспективных специалистов и опытных профессионалов.
 							section.text-block
 								h2.title-2.title-2--grey.text-block__title Заголовок второго уровня
-								p.text-block__paragrafe  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo eos cumque at accusamus id eveniet dignissimos, nisi pariatur ea quo maxime commodi, magni earum beatae nam quidem a, provident inventore.
+								p.text-block__paragrafe  Компания Mywalit считает основным активом и залогом успеха потенциал своих сотрудников. Компания активно развивается и ищет молодых перспективных специалистов и опытных профессионалов.
 							section.text-block
 								h3.title-3.title-3--grey.text-block__title Заголовок третьего уровня
-								p.text-block__paragrafe  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo eos cumque at accusamus id eveniet dignissimos, nisi pariatur ea quo maxime commodi, magni earum beatae nam quidem a, provident inventore.
+								p.text-block__paragrafe  Компания Mywalit считает основным активом и залогом успеха потенциал своих сотрудников. Компания активно развивается и ищет молодых перспективных специалистов и опытных профессионалов.
 							section.text-block.text-block--border
 								p.text-block__paragrafe.text-block__paragrafe--mb
 									| Дорогие участники клубной программы Mywalit!
