--- a/src/less/main.less
+++ b/src/less/main.less
@@ -73,6 +73,8 @@
 @import "pages/login-page";
 @import "pages/job";
 @import "pages/account-orders";
+@import "pages/shops";
+
 
 // Utils - Always Last - !IMPORTANT
 @import "utils/_margins";
