--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -70,3 +70,7 @@ block content
 				.card.align-items-center.pb-35
 					.title-2 Страница 404
 					+button("Перейти", "page404.html")
+			.col-md-4.mb-30
+				.card.align-items-center.pb-35
+					.title-2 Магазины
+					+button("Перейти", "shops.html")
