--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -100,5 +100,7 @@
 			+linkLeftPanel("Восстановление пароля", "../password-recover-page.html")
 			+linkLeftPanel("Вакансии", "../job.html")
 			+linkLeftPanel("Заказы пользователя в ЛК", "../account-orders.html")
+			+linkLeftPanel("Магазины", "../shops.html")
+
 
 #ui-nav-toggle Скрыть/Показать навигацию
