Реализована карта через api

--- a/src/pug/layouts/page-layout/_head.pug
+++ b/src/pug/layouts/page-layout/_head.pug
@@ -19,6 +19,9 @@ link(rel="stylesheet", href="./css/main.css")
 link(rel="stylesheet", href="./libs/bootstrap4-grid-customized/custom-grid.css")
 link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&amp;subset=cyrillic-ext" rel="stylesheet")
 
+//- Яндекс карта
+script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript")
+
 <!--[if lt IE 9]>
 script(src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js")
 <![endif]-->
