--- a/src/less/main.less
+++ b/src/less/main.less
@@ -49,6 +49,8 @@
 @import "blocks/_accordeon-job.less";
 @import "blocks/_job-modal.less";
 @import "blocks/_shop-card.less";
+@import "blocks/_map.less";
+
 
 // Sections
 @import "sections/_ui-nav-panel"; // Left panel in documentation
