Добавлено col-12 карте
Фикс расположения карты и карточек

--- a/src/pug/pages/shops.pug
+++ b/src/pug/pages/shops.pug
@@ -41,8 +41,8 @@ block content
 		.section-shops-map
 			.container
 				.row
-					//- script(type='text/javascript', charset='utf-8', async='', src='https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abeb4be68bd8b9218ca548f4878118dc58a83cfb684d8f47955faf9f8d04e308a&width=100%&height=311&lang=ru_RU&scroll=true')
-					#map
+					.col-12
+						#map
 		.section-shops-adress
 			.container
 				.row
