--- a/src/pug/pages/shops.pug
+++ b/src/pug/pages/shops.pug
@@ -46,17 +46,17 @@ block content
 		.section-shops-adress
 			.container
 				.row
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
-					.col-xs-12.col-sm-6.col-md-4
+					.col-xs-12.col-sm-12.col-md-6.col-lg-4
 						+shop-card('Центральный офис', 'ул. Зорге, 22А', '+7 (495) 132-62-60', 'Ежедневно с 9.00 до 20.00', '13 этаж')
 			//-футер				
 		.footer
