--- a/src/less/pages/shops.less
+++ b/src/less/pages/shops.less
@@ -17,6 +17,9 @@
 }
 .section-shops-map {
 	padding-bottom: 32px;
+	@media @desktopXL {
+		padding-bottom: 56px;
+	}
 }
 .section-shops-adress {
 	padding-bottom: 112px;
