--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -31,11 +31,11 @@ block content
 					h1.title-1 Хиты продаж				
 				.row
 					.col-6.col-md-3
-						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
+						+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 							+button-cart('В корзину','#')
 					
 					.col-6.col-md-3.order-lg-4
-						+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
+						+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 							+button-cart('В корзину','#')
 					
 					.col-6.col-md-3.order-md-4.order-lg-3
