--- a/src/pug/pages/account-favourite.pug
+++ b/src/pug/pages/account-favourite.pug
@@ -36,10 +36,10 @@ block content
 				.col-md-9
 					.row
 						.col-6.col-md-4
-							+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
+							+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 								+button-cart('В корзину','#')
 						.col-6.col-md-4
-							+card--sale( '- 40%','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
+							+card--sale( '- 40%','','goods/purse-brown-hover.png', 'goods/purse_brown.png', 'purse brown', '#', 'Портмоне тройного сложения с внешним карманом для монет на молнии, с ручкой', '4 893р.', '6 990р.' )
 								+button-cart('В корзину','#')
 						.col-6.col-md-4
 							+card( 'goods/purse-brown-hover.png', 'goods/purse_green.png', 'purse green', '#', 'Сумка большая, коллекция "Рига"', '1 990р.')
