shop-contacts-first-commit

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -33,7 +33,7 @@
 
 
 
-
+			+linkLeftPanel("Интернет-магазин контакты", "shop-contacts.html")
 			+linkLeftPanel("Карточка с адресом офиса", "shop-card.html")
 			+linkLeftPanel("Модальное окно - Вакансии", "job-modal.html")
 			+linkLeftPanel("Аккордеон - Вакансии", "accordeon-job.html")
