--- a/src/pug/pages/ui/shop-contacts.pug
+++ b/src/pug/pages/ui/shop-contacts.pug
@@ -44,8 +44,8 @@ block content
 				p.text-block__paragrafe.text-block__paragrafe--flex.text-block__paragrafe--special
 					span.text-block__paragrafe--phone +7 (499) 403-13-36
 					span.text-block__paragrafe--phone +7 (903) 562-91-98
-					a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email.d-md-block dealer@mywalit.ru
-				a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email.d-none.d-md-none dealer@mywalit.ru
+					a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email.d-none.d-md-block dealer@mywalit.ru
+				a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email.d-md-none dealer@mywalit.ru
 			.text-block.pl-0
 				p.text-block__paragrafe.text-block__paragrafe--special Пожелания и предложения присылайте на 
 					a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email.d-none.d-xl-inline-block  mywalit@mywalit.ru
