--- a/src/less/blocks/_shop-contacts.less
+++ b/src/less/blocks/_shop-contacts.less
@@ -3,7 +3,7 @@
 	@media @desktop{margin-bottom: 42px;}
 	@media @desktopXL{margin-bottom: 35px;}
 }
-.text-block--spacing-normal .text-block__paragrafe{letter-spacing: 0px;}
+//.text-block--spacing-normal .text-block__paragrafe{letter-spacing: 0px;}
 .text-block__paragrafe--flex{	
 	display: flex;
 	flex-wrap: wrap;
