--- a/src/pug/pages/ui/shop-contacts.pug
+++ b/src/pug/pages/ui/shop-contacts.pug
@@ -25,7 +25,8 @@ block content
 			.text-block.pl-0
 				p.text-block__paragrafe.text-block__paragrafe--special Ваши вопросы и пожелания присылайте по адресу:
 				a(href="#").text-block__paragrafe.text-block__paragrafe--special.text-block__paragrafe--email  mywalit@mywalit.ru
-				p.text-block__paragrafe.text-block__paragrafe--special Отдел маркетинга и рекламы: reklama@mywalit.ru
+				p.text-block__paragrafe.text-block__paragrafe--special Отдел маркетинга и рекламы: 
+					a(href="#").text-block__paragrafe.text-block__paragrafe--email reklama@mywalit.ru
 		section.text-block.text-block--spacing-normal
 			.text-block.pl-0
 				h3.title-3.title-3--grey.text-block__title Контакты центрального офиса:
