Форма дял страницы Контакты

--- a/src/pug/sections/ui-navigation.pug
+++ b/src/pug/sections/ui-navigation.pug
@@ -62,6 +62,8 @@
 			+linkLeftPanel("Выпадающий список", "drop-down.html")
 			+linkLeftPanel("Товары в корзине", "goods-cart.html")
 			+linkLeftPanel("Корзина с товаром", "goods-cart-page.html")
+			+linkLeftPanel("Форма на странице Контакты", "form-contact-page.html")
+
 			
 
 
