--- a/src/less/main.less
+++ b/src/less/main.less
@@ -51,6 +51,7 @@
 @import "blocks/_article-text.less";
 @import "blocks/_shop-card.less";
 @import "blocks/_map.less";
+@import "blocks/_form-contact-page.less";
 
 
 
