Изменено поведение ссылок в блоке согласия

--- a/src/pug/pages/ui/form-contact-page.pug
+++ b/src/pug/pages/ui/form-contact-page.pug
@@ -20,12 +20,12 @@ block content
 					textarea.form-contact-page__textarea(name="message", cols="30", rows="10")
 					span.form-contact-page__textarea-label Сообщение*
 					.input-field__error-text.input-field__error-text--textarea Введите сообщение
-				.order-one-click__info
-					p Нажимая кнопку "Оформить заказ", вы соглашаетесь с 
-						a(href="").order-one-click__info-link условиями оферты 
-						| и 
-						a(href="").order-one-click__info-link политикой конфиденциальности.
 			+button-apply('Отправить', '#')
+			.form-contact-page__info
+					p Нажимая кнопку "Отправить", вы соглашаетесь с 
+						a(href="").form-contact-page__info-link условиями оферты 
+						| и 
+						a(href="").form-contact-page__info-link политикой конфиденциальности.
 		pre.
 			form.form-contact-page
 			.form-contact-page__title Форма обратной связи
