--- a/src/less/blocks/_form-contact-page.less
+++ b/src/less/blocks/_form-contact-page.less
@@ -47,3 +47,24 @@
 		padding-bottom: 19px;
 	}
 }
+.form-contact-page__info{
+	line-height: 1;
+	font-size: 12px;
+	color: @text-light-grey;
+	padding-top: 14px;
+	p {
+		margin:0;
+		line-height: 1.2;
+		letter-spacing: -0.5px;
+	}
+}
+.form-contact-page__info-link {
+	border-bottom: 1px solid @btn-text-buy-click;
+	padding-bottom: 2px;
+	color: @btn-text-buy-click;
+	&:hover {
+		border-bottom: none;
+		color: @btn-text-buy-click;
+		text-decoration: none;
+	}
+}
